WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216827
webaudio/AudioBufferSource/audiobuffersource-playbackrate.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=216827
Summary
webaudio/AudioBufferSource/audiobuffersource-playbackrate.html is crashing
Chris Dumez
Reported
2020-09-22 08:47:01 PDT
webaudio/AudioBufferSource/audiobuffersource-playbackrate.html has been crashing since its import from Blink: ASSERTION FAILED: !hasFinished() ./Modules/webaudio/AudioScheduledSourceNode.cpp(197) : virtual void WebCore::AudioScheduledSourceNode::finish() 1 0x13c99d829 WTFCrash 2 0x11f6dd15b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x12189f7a0 WebCore::AudioScheduledSourceNode::finish() 4 0x1218686c5 WebCore::AudioBufferSourceNode::finish() 5 0x1218673df WebCore::AudioBufferSourceNode::renderSilenceAndFinishIfNotLooping(WebCore::AudioBus*, unsigned int, unsigned long) 6 0x12186690d WebCore::AudioBufferSourceNode::renderFromBuffer(WebCore::AudioBus*, unsigned int, unsigned long, double) 7 0x121865d80 WebCore::AudioBufferSourceNode::process(unsigned long) 8 0x12186f7ea WebCore::AudioNode::processIfNecessary(unsigned long) 9 0x121871db7 WebCore::AudioNodeOutput::pull(WebCore::AudioBus*, unsigned long) 10 0x121871b86 WebCore::AudioNodeInput::sumAllConnections(WebCore::AudioBus*, unsigned long) 11 0x121869f47 WebCore::AudioNodeInput::pull(WebCore::AudioBus*, unsigned long) 12 0x12186fd83 WebCore::AudioNode::pullInputs(unsigned long) 13 0x12186f71b WebCore::AudioNode::processIfNecessary(unsigned long) 14 0x121871db7 WebCore::AudioNodeOutput::pull(WebCore::AudioBus*, unsigned long) 15 0x121871b86 WebCore::AudioNodeInput::sumAllConnections(WebCore::AudioBus*, unsigned long) 16 0x121869f47 WebCore::AudioNodeInput::pull(WebCore::AudioBus*, unsigned long) 17 0x121869c31 WebCore::AudioDestinationNode::render(WebCore::AudioBus*, WebCore::AudioBus*, unsigned long, WebCore::AudioIOPosition const&) 18 0x1218e8b3a WebCore::OfflineAudioDestinationNode::offlineRender() 19 0x1219047af WebCore::OfflineAudioDestinationNode::startRendering()::$_0::operator()() const 20 0x12190475e WTF::Detail::CallableWrapper<WebCore::OfflineAudioDestinationNode::startRendering()::$_0, void>::call() 21 0x13c9c5612 WTF::Function<void ()>::operator()() const 22 0x13ca75598 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 23 0x13ca81648 WTF::wtfThreadEntryPoint(void*) 24 0x7fff2030f9b4 _pthread_start 25 0x7fff2030b4d7 thread_start
Attachments
Patch
(3.30 KB, patch)
2020-09-23 08:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-23 08:51:40 PDT
Created
attachment 409479
[details]
Patch
EWS
Comment 2
2020-09-23 10:07:22 PDT
Committed
r267486
: <
https://trac.webkit.org/changeset/267486
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409479
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-23 10:08:21 PDT
<
rdar://problem/69442398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug