webaudio/AudioBufferSource/audiobuffersource-playbackrate.html is crashing https://bugs.webkit.org/show_bug.cgi?id=216827

Reviewed by Darin Adler.

Source/WebCore:

AudioBufferSourceNode::renderSilenceAndFinishIfNotLooping() would hit an assertion inside
finish() because finish() was already called earlier when calling updateSchedulingInfo().
updateSchedulingInfo() already takes care of calling finish() when we're done playing.
Address the issue by only calling finish() if hasFinished() returns false.

No new tests, unskipped existing test.

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::renderSilenceAndFinishIfNotLooping):

LayoutTests:

Unskip test that is no longer crashing.

* TestExpectations:


Canonical link: https://commits.webkit.org/229671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267486 268f45cc-cd09-0410-ab3c-d52691b4dbfc